--- a/requirements.txt
+++ b/requirements.txt
@@ -62,7 +62,7 @@ pyparsing==2.3.1
 python-dateutil==2.8.0
 python-dotenv==0.10.1
 pytz==2018.9
-PyYAML==3.13
+PyYAML==4.2b1
 pyzmq==17.1.3
 qtconsole==4.4.3
 requests==2.21.0
